Правки к первому заданию

--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
     return 1.337 * wizardWidth;
   };
   var getWizardX = function (width) {
-    return width = 300;
+    return width / 2;
   };
   var getWizardY = function (height) {
-    return height = 67;
-  }
+    return height / 3;
+  };
 </script>
 <script src="js/game.js"></script>
 
